Fixed background on mobile

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -8,12 +8,6 @@ body {
 	background-repeat: repeat-y;
 }
 
-@media(max-width: 768px){
-	body {
-		background: #2a2a2a;
-	}
-}
-
 html, body{
 	height: 100%;
 }
